@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2022 Obeo.
+ * Copyright (c) 2019, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -56,6 +56,9 @@ const createDocumentMutation = gql`
       ... on ErrorPayload {
         message
       }
+      ... on CreateDocumentSuccessPayload {
+        documentId
+      }
     }
   }
 `;
@@ -96,8 +99,15 @@ export const NewDocumentModal = ({ editingContextId, onClose }: NewDocumentModal
     newDocumentModalMachine
   );
   const { newDocumentModal, toast } = value as SchemaValue;
-  const { name, nameMessage, nameIsInvalid, selectedStereotypeDescriptionId, stereotypeDescriptions, message } =
-    context;
+  const {
+    name,
+    nameMessage,
+    nameIsInvalid,
+    selectedStereotypeDescriptionId,
+    stereotypeDescriptions,
+    message,
+    newDocumentId,
+  } = context;
 
   const {
     loading: stereotypeDescriptionsLoading,
@@ -179,7 +189,7 @@ export const NewDocumentModal = ({ editingContextId, onClose }: NewDocumentModal
 
   useEffect(() => {
     if (newDocumentModal === 'success') {
-      onClose();
+      onClose(newDocumentId);
     }
   }, [newDocumentModal, onClose]);
 
